# alpaca-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scheduler.py  state.py  strategy.py  stream.py  trader.py
.github/workflows/: deploy.yml
backtest/: alpaca_source.py  data.py  engine.py  metrics.py  portfolio.py  prices.py  runner.py  strategy.py
copy/: copier.py  portfolio.py  scorer.py  state.py
copy_trader/: config.py  copier.py  exits.py  portfolio.py  reconcile.py  scorer.py  scraper.py  state.py
docs/: known-limitations.md  migration.md
openspec/: config.yaml  project.md
shared/: alpaca_client.py  control.py  kill_switch.py  market_hours.py  trader.py
telegram_bot/: client.py  commands.py  config.py  formatter.py  keyboard.py  notifier.py  poller.py  queries.py
tests/: conftest.py
tests/fixtures/: ptr_sample.json
tests/integration/: test_alpaca_mleg.py
tests/replay/: test_pnl_walk.py  test_spread_selection.py
tests/unit/: test_atr.py  test_backtest_data.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_portfolio.py  test_backtest_prices.py  test_backtest_strategy.py  test_config.py  test_control.py  test_copier.py  test_copy_exits.py  test_copy_portfolio.py  test_copy_reconcile.py  test_engine.py  test_kill_switch.py  test_monitor.py  test_scraper.py  test_smoke.py  (+14 more)
trailing/: atr.py  state.py  strategy.py  stream.py
web/: app.py
wheel/: __init__.py  config.py  engine.py  monitor.py  options.py  spreads.py  state.py  summary.py
(+10 files in other folders)
