[project]
name = "alpaca-bot"
version = "0.1.0"
description = "Automated trading bot for Alpaca paper trading"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.13.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "pytz>=2024.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra -m 'not integration'"
markers = [
    "integration: hits the real Alpaca paper API (skipped by default)",
    "replay: runs against captured option-chain JSON fixtures",
]
asyncio_mode = "auto"
